tests/fixtures/invalid/dict_div_bytes.py
# Cannot divide Dict[str, int] and Bytes
x: float = {"a": 1} / b"hello"
